# pico2w_syringe_pump

./: CMakeLists.txt  README.md
.cache/clangd/index/: FreeRTOS.h.47FD2EC25392AFAE.idx  FreeRTOSConfig.h.A1407C9D2CC5C2EE.idx  core0_main.c.D275E16EF213420C.idx  core0_main.h.B6A415C871E65519.idx  core1_main.c.4C96B17DE9233A87.idx  core1_main.h.9D99A885E143E190.idx  crosscore_cmd.c.2AA81F6402043AE1.idx  crosscore_cmd.h.6A034A48F1BDACA3.idx  crosscore_logger.c.6DCD60948887FDCB.idx  crosscore_logger.h.3D2D5E241ED50C39.idx  deprecated_definitions.h.8768D4CCAD309204.idx  event_groups.c.0AB822A848B40032.idx  event_groups.h.187BDA2C2C882AF3.idx  heap_3.c.73A8CA378B75A564.idx  honeywell_spi.c.3523AD1083950A90.idx  honeywell_spi.h.2D0C3E1291662111.idx  list.c.C655EAAF01697A50.idx  list.h.E5216F0885BC260A.idx  lwipopts.h.F1AE56B31C61933F.idx  main.c.A92CF04F72097F0B.idx  mpu_prototypes.h.9D98045C34BC7DA4.idx  mpu_syscall_numbers.h.1ADDE3B92EF5CD3E.idx  mpu_wrappers.h.6181463E774A79D5.idx  mpu_wrappers_v2_asm.c.0536B66CD5186364.idx  mqtt_client.c.33EE146FF423EB63.idx  mqtt_client.h.B1E36E998A5F15B7.idx  port.c.BE2D4A9120484549.idx  portable.h.EBA7DF739F5C71D1.idx  portasm.c.4B62054F78D730D3.idx  portasm.h.7DF6A2F800F7EA7F.idx  portmacro.h.CE08336E6C8AAA5E.idx  portmacrocommon.h.CE215EFCC378113F.idx  projdefs.h.201CC28C1B3ABF61.idx  (+14 more)
freertos/: CMakeLists.txt
freertos/include/: FreeRTOSConfig.h
lib/honeywell/: CMakeLists.txt  honeywell_spi.c  honeywell_spi.h
lib/tmc2209/: CMakeLists.txt  tmc2209.c  tmc2209.h  tmc2209.pio
src/: core0_main.c  core0_main.h  core1_main.c  core1_main.h  crosscore_cmd.c  crosscore_cmd.h  crosscore_logger.c  crosscore_logger.h  lwipopts.h  main.c  mqtt_client.c  mqtt_client.h  test_modes.c  test_modes.h
